--- a/index.css
+++ b/index.css
@@ -16,17 +16,64 @@ FONTS
 }
 
 /* *************** */
+/* Animation Class */
+/* *************** */
+
+.risingSelection {
+	animation: rise;
+	animation-direction: forward;
+	animation-duration: 1s;
+	animation-delay: 0.3s;
+	animation-fill-mode: forwards;
+}
+
+.fallingSelection {
+	animation: fall;
+	animation-direction: forward;
+	animation-duration: 0.3s;
+	animation-delay: 1s;
+	animation-fill-mode: forwards;
+}
+
+@keyframes rise {
+	from {
+		top: 30px;
+		opacity: 0;
+	}
+	to {
+		top: 0px;
+		opacity: 1;
+	}
+}
+
+@keyframes fall {
+	from {
+		top: 0px;
+		opacity: 1;
+	}
+	to {
+		top: 30px;
+		opacity: 0;
+	}
+}
+
+/* *************** */
 /* Menu Arrow */
 /* *************** */
 
 .menu__arrow {
-	color: white;
+	color: black;
 	position: absolute;
 	top: 15px;
-	font-size: 30px;
+	font-size: 35px;
 	position: fixed;
 	transition: 1s;
-	left: 180px;
+	left: 20px;
+	z-index: 2;
+}
+
+.menu__arrow:hover {
+	cursor: pointer;
 }
 
 /* *************** */
@@ -38,13 +85,15 @@ FONTS
 	height: 100vh;
 	background-image: url('./img/driving.jpg');
 	background-size: cover;
-	margin-left: 220px;
+	margin-left: 0px; /* change 220 on JS*/
 	overflow-x: hidden;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	position: relative;
 	z-index: 1;
+	transition-delay: 0.4s;
+	transition: 0.7s;
 }
 
 /* Clock strip */
@@ -69,12 +118,12 @@ FONTS
 /* Slide-out menu */
 .side__menu {
 	height: 100%;
-	width: 220px;
+	width: 0px; /* change on JS*/
 	position: fixed;
 	top: 0;
 	left: 0;
 	background-color: black;
-	padding: 40px 10px;
+	padding: 50px 0px;
 	z-index: 1;
 	overflow-x: hidden;
 	transition: 0.7s;
@@ -90,6 +139,7 @@ FONTS
 	align-items: center;
 	flex-direction: column;
 	position: relative;
+	opacity: 0;
 }
 
 /* Text above drop menus */
@@ -97,6 +147,7 @@ FONTS
 	color: white;
 	letter-spacing: 1px;
 	font-size: 1.5em;
+	transition: 0.3s;
 }
 
 /* Update Clock button */
@@ -109,4 +160,5 @@ FONTS
 	border: none;
 	background-color: white;
 	color: black;
+	opacity: 0;
 }
